--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "ctrader-backend",
+  "name": "ctrader-indicator-backend",
   "version": "1.0.0",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.18.2"
   }
